# arts

./: .blameignorerevs  .clang-format  .clang-tidy  .clangd  .cproject  .cvsignore  .gitignore  .project  .travis.yml  AUTHORS  BOOL_EDITOR_FIX.md  CHANGES-2.2  CHANGES-2.3  CHANGES-2.4  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ChangeLog  ChangeLog-0.x  ChangeLog-20071207  ChangeLog-archived  DEMO_GUIDE.md  EDITOR_COVERAGE_SUMMARY.md  EMPTY_ARRAY_FIX.md  GITHUB-INTRO.md  INTERFACE_FIXES.md  KNOWN_ISSUES  LICENSE.txt  Makefile.am  NEWS  NOTES-vZ.txt  OPTIONS_EDITOR_SUMMARY.md  PRIORITY_EDITORS_SUMMARY.md  README  README.cmake  README.md  THANKS  TODO  TYPE_PRESERVATION_SUMMARY.md  UNIFIED_EDITOR_DESIGN.md  (+56 more)
aii/: .cvsignore  Batch_WV_Fit  CreateArtsControlFile.pro  Makefile.am  README  RH_test.pro  RH_test_batch  WVContParamFit.pro  WaterVaporSatPressure.pro  aii_aa_read_general.pro  aii_checks.pro  aii_color_table.pro  aii_compile  aii_compile.pro  aii_epilogue.pro  aii_get_hostname.pro  aii_help.pro  aii_klegend_d.pro  aii_plot_file.pro  aii_plot_legend.pro  aii_plotsymbols.pro  aii_prologue_l.pro  aii_readfile.pro  aii_startup  aii_startup.pro  aii_student_t_dist_table.pro  aii_where_str.pro  aii_writedatum.pro  myregress.pro  plot_RT_1.pro  plot_abs_per_tg.pro  plot_abs_per_tg_2.pro  plot_trans_1.pro  plot_vmr_per_tg.pro  read_artsvar.pro  read_datafile.pro  read_tag_groups.pro  showme.pro  showmebatch  sort_abs.pro  (+3 more)
ami/: .cvsignore  Makefile.am  README  arts.m  get_artstype.m  hread_artsvar.m  init.m  read_arts.m  read_artsvar.m  read_datafile.m  read_tb.m  startup.m  write_arts.m  write_artsvar.m  write_datafile.m
ami/arts/: .cvsignore  Makefile.am  arts.m  arts_version.m  get_artstype.m  qtool.m  read_artsvar.m  read_datafile.m  sample.tmplt  sstring_get_i.m  sstring_length.m  sstring_put_i.m  tag2mo.m  test_Kt.m  write_artsvar.m  write_datafile.m  wsv.txt
ami/file/: Makefile.am  arts_path.m  cira86.m  combine_lines.m  filedate.m  filter_lines.m  get_artsconfig.m  modify_lines.m  my2arts.m  read_linefile.m  read_mytran.m  read_verdandi.m  vtag2arts.data  vtag2arts.m  write_linefile.m  write_mytran.m
ami/general/: Makefile.am  amenu.m  answer_is_yes.m  geomtan2za.m  invplanck.m  invrayjean.m  isinteger.m  isodd.m  last.m  legend2.m  out.m  rand_test.m  whoami.m
ami/hmatrix/: Makefile.am  create_binfile.m  gaussian_response.m  hAntennaFromFile.m  hAntennaFromFileAdv.m  hAntennaGauss.m  hAntennaGaussAdv.m  hBackendFromFile.m  hBackendGauss.m  hBinView.m  hBinfile.m  hEigs.m  hFreqSwitch.m  hHdFromFile.m  hHsFromFile.m  hInit.m  hLoad.m  hMixerConst.m  hMixerFromFile.m  hRedKx.m  hRedLimb.m  hSave.m  hTb.m  h_antenna.m  h_backend.m  h_fix_ys.m  h_mixer.m  h_mixer_full.m  h_weights_integr.m  h_x_h.m  pbasis.m  pbasis_integrate.m  pbasis_x_pol.m
ami/math/: Makefile.am  isinteger.m  isodd.m  isscalar.m  iswhole.m  sFromFile.m  vec2col.m  vec2row.m
ami/obsolete/: isscalar.m
ami/path/: Makefile.am  delete_tmp_dir.m  dir_in_dir.m  subfolders.m  temporary_directory.m
ami/physics/: Makefile.am  alpha_between_r1_r2.m  cyl2cart.m  do_1gridbox_2d_geom.m  doppler_fwhm.m  geomtan2za.m  hseCalc.m  nd2vmr.m  planck.m  ppath_2d_3d.m  psurface_crossing.m  tilt_of_psurface.m  vmr2nd.m  wgs84.m  za2geomtan.m  za_geom2other_point.m  zpot2zgeom.m
ami/plot/: Makefile.am  ax_set.m  axes_1xn.m  axes_nx1.m  fig_size.m  hide_axes.m  lpr.m  mkfig_1gridbox_2d.m  mkfig_ppath_2d.m  pline.m  plineleg.m  plot_1gridbox_2d.m  plot_atm_1d.m  plot_atm_2d.m  plot_ppath.m  plot_psurface.m  suptitle.m  text2.m  text3.m  title2.m  xlabel2.m  ylabel2.m  zlabel2.m
ami/retrieval/: Makefile.am  fill_grid.m  fwhm.m  interpp.m  join_grids.m  loggrid.m  opt_fmono.m
ami/xml/: Makefile.am  xmlCheckSize.m  xmlGetAttrValue.m  xmlLoad.m  xmlReadArray.m  xmlReadAttributes.m  xmlReadGasAbsLookup.m  xmlReadMatrix.m  xmlReadTag.m  xmlReadTensor3.m  xmlReadTensor4.m  xmlReadTensor5.m  xmlReadTensor6.m  xmlReadVector.m
controlfiles/: CMakeLists.txt
controlfiles/atmosphere_data/: tropical.ClO.xml  tropical.H2O.xml  tropical.HNO3.xml  tropical.N2O.xml  tropical.O2.xml  tropical.O3.xml  tropical.t.xml
controlfiles/classroom_exercises/: arts_init
controlfiles/general/: agendas.arts  agendas.py  agendasDOIT.arts  agendasDOIT.py  agendas_new.arts  agendas_surface.arts  agendas_surface.py  agendas_surface_sub.arts  agendas_surface_sub.py  continua.arts  continua.py  general.arts  general.py  moon_io.arts  moon_io.py  planet_earth.arts  planet_earth.py  planet_jupiter.arts  planet_jupiter.py  planet_mars.arts  planet_mars.py  (+2 more)
doc/: CMakeLists.txt  Makefile.am  arts.css  index.html.in
includes/: CMakeLists.txt  Makefile.am  agendasDOIT.arts  amsua.arts  amsub.arts  continua.arts  general.arts  linefile.SM_AC1e.xml  linefile.SM_AC2ab.xml  odinsmr.arts  odinsmr_501.arts  odinsmr_501_1D.arts  odinsmr_544.arts
python/: CMakeLists.txt  MANIFEST.in  pyproject.toml.in  setup.py  setup.py.in
src/: .cvsignore  CMakeLists.txt  DISORT.c  DISORT.h  Faddeeva.cc  Makefile.am  ZZZ.txt  abs_o2_models.h  abs_species_tags.cc  abs_species_tags.h  absorption.cc  absorption.h  absorptionlines.cc  absorptionlines.h  agenda.cc  agenda.h  agenda_class.cc  agenda_class.h  agenda_record.cc  agenda_record.h  agenda_set.cc  agenda_set.h  agenda_wrapper.h  agenda_wrapper_mpi.h  agendas.cc  array.h  arts.cc  arts.h  arts_api.cc  arts_api.h  arts_api_classes.cc  arts_api_classes.h  arts_constants.h  arts_constexpr_math.h  arts_conversions.h  arts_getopt.c  arts_getopt.h  arts_getopt1.c  arts_mpi.cc  arts_mpi.h  (+686 more)
tests/: .cvsignore  CMakeLists.txt  MCDataPrepare.arts  Makefile.am  artsXML.py  simpleAbs.arts  simpleClearSky.arts  simpleDISORT.arts  simpleDOIT.arts  simpleMC.arts  simpleMCGeneral.arts  simpleMCGeneralGaussian.arts  simpleMCWithIncomingLookup.arts  test_tests.py  testall.py  this_is_the_main_test_directory
uguide/: .cvsignore  Makefile.am  README  chapter_template.tex  concept.tex  development.tex  formalism.tex  los1d.tex  main.tex  measerr.tex  reduction.tex  rte.tex  sensor.tex  wfuns_atm.tex  wfuns_sensor.tex
(+4951 files in other folders)
